@@ -2,7 +2,7 @@ package com.orientechnologies.orient.core.command.script;
 
 import com.orientechnologies.orient.core.command.script.transformer.OScriptTransformer;
 import com.orientechnologies.orient.core.command.script.transformer.resultset.ONashornObjectMirrorTransformer;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 
 /**
  * Created by tglman on 25/01/17.
